Fix overflowing card widths

--- a/src/song-card/song-card.css
+++ b/src/song-card/song-card.css
@@ -56,6 +56,7 @@
   display: flex;
   flex: 1 1 0;
   align-items: stretch;
+  max-width: 100%;
   /* transition: transform 0.3s ease-in-out; */
 
   transform-origin: 50% 50%;
